Bug 1556993 - Ignore invalid handles in Mozilla{,Un}RegisterDebugHandle - r=erahm

In particular, on Windows stdin/out/err may not be associated with a stream
(e.g., app without console window), in which case _get_osfhandle() returns -2.

Differential Revision: https://phabricator.services.mozilla.com/D34513