xpcom/build/PoisonIOInterposerBase.cpp
@@ -4,6 +4,7 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
+#include "mozilla/Maybe.h"
 #include "mozilla/Mutex.h"
 #include "mozilla/Scoped.h"
 #include "mozilla/UniquePtr.h"
@@ -21,9 +22,18 @@
 // Auxiliary method to convert file descriptors to ids
 #if defined(XP_WIN)
 #  include <io.h>
-inline intptr_t FileDescriptorToHandle(int aFd) { return _get_osfhandle(aFd); }
+inline mozilla::Maybe<intptr_t> FileDescriptorToHandle(int aFd) {
+  intptr_t handle = _get_osfhandle(aFd);
+  if ((handle == -1) || (handle == -2)) {
+    // -1: Invalid handle. -2: stdin/out/err not associated with a stream.
+    return mozilla::Nothing();
+  }
+  return mozilla::Some(handle);
+}
 #else
-inline intptr_t FileDescriptorToHandle(int aFd) { return aFd; }
+inline mozilla::Maybe<intptr_t> FileDescriptorToHandle(int aFd) {
+  return mozilla::Some<intptr_t>(aFd);
+}
 #endif /* if not XP_WIN */
 
 using namespace mozilla;
@@ -208,7 +218,11 @@ void MozillaRegisterDebugHandle(intptr_t aHandle) {
 }
 
 void MozillaRegisterDebugFD(int aFd) {
-  MozillaRegisterDebugHandle(FileDescriptorToHandle(aFd));
+  Maybe<intptr_t> handle = FileDescriptorToHandle(aFd);
+  if (!handle.isSome()) {
+    return;
+  }
+  MozillaRegisterDebugHandle(handle.value());
 }
 
 void MozillaRegisterDebugFILE(FILE* aFile) {
@@ -227,7 +241,11 @@ void MozillaUnRegisterDebugHandle(intptr_t aHandle) {
 }
 
 void MozillaUnRegisterDebugFD(int aFd) {
-  MozillaUnRegisterDebugHandle(FileDescriptorToHandle(aFd));
+  Maybe<intptr_t> handle = FileDescriptorToHandle(aFd);
+  if (!handle.isSome()) {
+    return;
+  }
+  MozillaUnRegisterDebugHandle(handle.value());
 }
 
 void MozillaUnRegisterDebugFILE(FILE* aFile) {
